tests/snapshots/integration_test__tests__should_be_able_to_mutate_mutable_fields.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        var test = {\n            mut foo: \"bar\",\n        };\n\n        test.foo = \"baz\";\n        out(test.foo);\n        \"#,\n    \"\", |_| {})"
---
stdout: "baz\n"
stderr: ""
error: ~
exit_code: 0
