tests/snapshots/integration_test__tests__should_be_able_to_return_with_an_exit_code.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nexit 69;\n\"#)"
---
stdout: ""
stderr: ""
error: ~
exit_code: 69
