tests/snapshots/integration_test__tests__should_break_from_while_loop.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nvar index = 0;\nwhile true {\n  index = index + 1;\n  if index == 5 {\n    break;\n  };\n  out(fmt(index));\n};\n\"#)"
---
stdout: "1\n2\n3\n4\n"
stderr: ""
error: ~
