tests/snapshots/integration_test__tests__should_error_if_operator_expression_is_invalid.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        1 + \"test\";\n        \"#, \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: Invalid operator expression Integer Addition String.
exit_code: 103
