tests/snapshots/integration_test__tests__should_error_when_accessing_unknown_function.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        var value = \"test\";\n        value.do_the_hokey_pokey();\n        \"#,\n    \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: "Instance function with name 'do_the_hokey_pokey' and type signature () not found"
exit_code: 103
