tests/snapshots/integration_test__tests__should_error_when_assigning_incompatible_object_types.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        var mut another_object: { foo: string };\n        another_object = { foo: 123 };\n        \"#,\n    \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: "Unable to assign a value of type '{ foo: integer }' to a variable of type '{ foo: string }'"
exit_code: 103
