tests/snapshots/integration_test__tests__should_error_when_builtin_function_arguments_are_the_incorrect_type.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        glob(123);\n        \"#, \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: "Function with name 'glob' and type signature (integer) not found"
exit_code: 103
