tests/snapshots/integration_test__tests__should_error_when_creating_a_function_with_an_argument_of_void.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nfunc test(arg: void) {}\n\"#)"
---
stdout: ""
stderr: ""
error:
  ParserError:
    message: Function arguments must not have a type of void
    token: RightBracket
    start: 20
    end: 21
exit_code: 102
