tests/snapshots/integration_test__tests__should_error_when_creating_an_empty_array_with_no_type.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nvar variable = [];\n\"#, \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: Expected all values of an array to be the same type
exit_code: 103
