tests/snapshots/integration_test__tests__should_error_when_declaring_a_variable_of_type_void.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nvar test: void;\n\"#)"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: Variables must not be declared with a type of void
    call_stack: []
