tests/snapshots/integration_test__tests__should_error_when_invalid_function_called.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        blarg();\n        \"#, \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: "Function with name 'blarg' and type signature () not found"
exit_code: 103
